--- a/app/views/qr_links/index.html.erb
+++ b/app/views/qr_links/index.html.erb
@@ -10,8 +10,8 @@
     <tr>
       <th>Name</th>
       <th>Destination URL</th>
-      <th>QR PNG</th>
-      <th>QR Resolve URL</th>
+      <th>QR image</th>
+      <th>Resolve URL</th>
     </tr>
   </thead>
   <tbody>
@@ -20,3 +20,22 @@
 <br>
 
 <%= link_to "New qr link", new_qr_link_path %>
+
+<script>
+  $(document).ready(function() {
+    $('#qr-links-datatable').dataTable({
+      "processing": true,
+      "serverSide": true,
+      "ajax": {
+        "url": $('#qr-link').data('source')
+      },
+      "pagingType": "full_numbers",
+      "columns": [
+        { "data": "name" },
+        { "data": "destination_url" },
+        { "data": "qr_png_url", "render": function (data) {return "<img src='" + data + "' width='120px' height='120px'>";} },
+        { "data": "resolve_url" }
+      ]
+    });
+  });
+</script>
