--- a/app/views/qr_links/index.html.erb
+++ b/app/views/qr_links/index.html.erb
@@ -5,37 +5,45 @@
 <%= link_to "New qr link", new_qr_link_path %>
 </div>
 
-<table id="qr-links-datatable" data-source="<%= qr_links_path(format: :json) %>">
+<table id="qr-links-datatable" class="cell-border">
   <thead>
     <tr>
       <th>Name</th>
       <th>Destination URL</th>
       <th>QR image</th>
       <th>Resolve URL</th>
+      <th>Created At</th>
+      <th>Modified At</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
+    <% @qr_links.each do |qr_link| %>
+      <tr>
+        <td><%= link_to qr_link.name, qr_link_path(qr_link) %></td>
+        <td><%= qr_link.destination_url %></td>
+        <td><%= image_tag(qr_link.qr_png_url, style: 'height:100px;width:100px;') %></td>
+        <td><%= qr_link.resolve_url %></td>
+        <td><%= qr_link.created_at.strftime("%F") %></td>
+        <td><%= qr_link.updated_at.strftime("%F") %></td>
+        <td>
+          <%= link_to "Show", qr_link_path(qr_link), :class => "btn btn-primary" %>
+          <%= link_to "Edit", edit_qr_link_path(qr_link) %>
+          <%= link_to "Destroy", qr_link_path(qr_link), method: :delete, data: { confirm: "Are you sure?" } %>
+        </td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
-<br>
 
 <%= link_to "New qr link", new_qr_link_path %>
 
 <script>
   $(document).ready(function() {
-    $('#qr-links-datatable').dataTable({
-      "processing": true,
-      "serverSide": true,
-      "ajax": {
-        "url": $('#qr-link').data('source')
-      },
-      "pagingType": "full_numbers",
-      "columns": [
-        { "data": "name" },
-        { "data": "destination_url" },
-        { "data": "qr_png_url", "render": function (data) {return "<img src='" + data + "' width='120px' height='120px'>";} },
-        { "data": "resolve_url" }
-      ]
-    });
+    if ( ! $.fn.DataTable.isDataTable( '#qr-links-datatable' ) ) {
+      $('#qr-links-datatable').dataTable({
+        "pagingType": "full_numbers",
+      });
+    }
   });
 </script>
