--- a/app/views/qr_links/_form.html.erb
+++ b/app/views/qr_links/_form.html.erb
@@ -21,7 +21,7 @@
     <%= form.text_field :destination_url %>
   </div>
 
-  <div>
+  <div class="btn-blue max-w-40 mt-6 cursor-pointer">
     <%= form.submit %>
   </div>
 <% end %>
