--- a/app/views/qr_links/new.html.erb
+++ b/app/views/qr_links/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to qr links", qr_links_path %>
+  <%= link_to "Back to qr links", qr_links_path, class: 'btn-blue' %>
 </div>
