--- a/app/views/qr_links/edit.html.erb
+++ b/app/views/qr_links/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this qr link", @qr_link %> |
-  <%= link_to "Back to qr links", qr_links_path %>
+  <%= link_to "Show this qr link", @qr_link, class: 'btn-blue' %> |
+  <%= link_to "Back to qr links", qr_links_path, class: 'btn-blue' %>
 </div>
